[ADD] Search function

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1821,6 +1821,15 @@ h1, h2, h3, h4, h5,
 	flex:0 0 75%;
 	max-width:75%}
 
+.imageRow {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -50px;
+    margin-left: 300px;
+}
 
 
 
